Changed page text to under construction. Also to test if namecheap domain works.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Alexander Hwang: Personal Page</title>
+    </head>
+    <body>
+        <p>Alexander Hwang</p>
+        <p>This page is under construction! Opening Date TBD.</p>
+    </body>
+</html>
