Added a menu bar at the top of the page and 'IN PROGRESS' text.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
         <title>Alexander Hwang: Personal Page</title>
     </head>
     <body>
-        <p>Alexander Hwang</p>
-        <p>This page is under construction! Opening Date TBD.</p>
+        <div class="menu_bar">
+            <ul>
+                <li></li>
+                <li class="menu_item">Home</li>
+                <li class="menu_item">Projects</li>
+                <li class="menu_item">About Me</li>
+                <li></li>
+            </ul>
+        </div>
+        <div>
+            <ul id="inProgress">
+                <li>I</li>
+                <li>N</li>
+                <br>
+                <li>P</li>
+                <li>R</li>
+                <li>O</li>
+                <li>G</li>
+                <li>R</li>
+                <li>E</li>
+                <li>S</li>
+                <li>S</li>
+                <li>!</li>
+                <li>!</li>
+            </ul>
+        </div>
     </body>
 </html>
