Experimented with subdirectories.

--- a/next.html
+++ b/next.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+        <link type="text/css" rel="stylesheet" href="stylesheetNext.css"/>
         <title>Alexander Hwang: Personal Page</title>
     </head>
     <body>
         <div class="menu_bar">
             <ul>
                 <li></li>
-                <li class="menu_item">Home</li>
-                <li class="menu_item">Projects</li>
-                <li class="menu_item">About Me</li>
-                <li class="menu_item"><a href="test/index.html">Test</a></li>
-                <li class="menu_item"><a href="next.html">Next</a></li>
+                <li class="menu_item">Next</li>
                 <li></li>
             </ul>
         </div>
