--- a/test/index.html
+++ b/test/index.html
@@ -8,11 +8,7 @@
         <div class="menu_bar">
             <ul>
                 <li></li>
-                <li class="menu_item">Home</li>
-                <li class="menu_item">Projects</li>
-                <li class="menu_item">About Me</li>
-                <li class="menu_item"><a href="test/index.html">Test</a></li>
-                <li class="menu_item"><a href="next.html">Next</a></li>
+                <li class="menu_item">Test</li>
                 <li></li>
             </ul>
         </div>
