Added more styling to polish the menu bar and home page. There is now an opening picture with my name over it as well as some filler paragraphs.

--- a/index.html
+++ b/index.html
@@ -2,36 +2,55 @@
 <html>
     <head>
         <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:normal&effect=outline' rel='stylesheet' type='text/css'>
         <title>Alexander Hwang: Personal Page</title>
     </head>
     <body>
         <div class="menu_bar">
             <ul>
-                <li></li>
                 <li class="menu_item">Home</li>
                 <li class="menu_item">Projects</li>
                 <li class="menu_item">About Me</li>
-                <li class="menu_item"><a href="test/index.html">Test</a></li>
-                <li class="menu_item"><a href="next.html">Next</a></li>
-                <li></li>
+                <a href="test/index.html"><li class="menu_item">Test</li></a>
+                <a href="next.html"><li class="menu_item">Next</li></a>
+
             </ul>
         </div>
+
+        <div id="opening">
+            <div class="font-effect-outline">Alexander Hwang</div>
+        </div>
+        <div id="color_pallette">
+            <div style="background-color:#103973"><span>#103973</span></div>
+            <div style="background-color:#528be6"><span>#528be6</span></div>
+            <div style="background-color:#ffffff"><span>#ffffff</span></div>
+            <div style="background-color:#295194"><span>#295194</span></div>
+            <div style="background-color:#bd8b6a"><span>#bd8b6a</span></div>
+            <div style="background-color:#9ccdff"><span>#9ccdff</span></div>
+            <div style="background-color:#eecd62"><span>#eecd62</span></div>
+            <div style="background-color:#ffe683"><span>#ffe683</span></div>
+            <div style="background-color:#73a4ee"><span>#73a4ee</span></div>
+            <div style="background-color:#deeeff"><span>#deeeff</span></div>
+            <div style="background-color:#4a73ac"><span>#4a73ac</span></div>
+            <div style="background-color:#7b5241"><span>#7b5241</span></div>
+        </div>
+        <div class="text">
+            <h2>Projects</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec bibendum mollis velit, nec imperdiet dolor facilisis at. Duis tincidunt porttitor velit gravida iaculis. Morbi et varius sapien. Donec bibendum venenatis placerat. Sed consequat turpis nisl, eget sodales mi eleifend eget. Duis arcu nibh, varius sit amet elit ac, scelerisque sagittis ligula. Nullam scelerisque, dolor semper rhoncus suscipit, sem est vulputate metus, vitae iaculis massa ligula vel ipsum. Morbi feugiat laoreet dapibus. Sed mattis nibh tincidunt vehicula mollis. Quisque vehicula molestie leo. In lacinia ex diam, a pulvinar purus dignissim vitae. Aenean tristique molestie mauris. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nam malesuada a tellus nec finibus. Vestibulum eu leo magna. Proin nisi ante, efficitur nec sem id, tempus lacinia ante.</p>
+        </div>
+        <div class="text">
+            <h2>About Me</h2>
+            <p>Pellentesque ornare, odio ut blandit blandit, lorem elit tristique libero, id hendrerit ligula erat eu urna. Etiam faucibus quam viverra leo placerat malesuada. Fusce mollis lectus at convallis ultrices. Maecenas pharetra lectus a laoreet posuere. Quisque iaculis commodo sem, eget consequat nisi vulputate vitae. Integer sed ultrices nulla, at sagittis nulla. Vestibulum vel ex at tellus ullamcorper finibus.</p>
+        </div>
+        <div class="text">
+            <h2>Skills</h2>
+            <p>Curabitur sit amet ante at neque elementum posuere. Phasellus quis aliquam mauris. Aliquam pulvinar maximus magna et accumsan. Donec at efficitur sapien. Suspendisse potenti. Phasellus ultrices vel felis eget dictum. Aliquam lacinia tellus vel tincidunt bibendum. Curabitur sit amet enim sodales, condimentum ligula at, vestibulum arcu. Phasellus commodo pharetra sem sed semper. Curabitur luctus ornare hendrerit. Integer fermentum justo risus, ut blandit lorem imperdiet vel. Vestibulum fringilla vel nisl quis elementum.</p>
+        </div>
+        <div class="text">
+            <h2>Contact/More</h2>
+            <p>Aliquam dictum ante neque, rutrum egestas eros fringilla ut. Maecenas tempor aliquam sem, nec tincidunt orci sollicitudin sit amet. Donec sem lorem, dignissim id venenatis at, egestas et dolor. Ut maximus magna at accumsan condimentum. Etiam sit amet facilisis nunc. Sed sagittis, augue in porta convallis, nulla nulla consectetur sapien, et accumsan tortor eros ut tellus. Proin bibendum nunc et est feugiat, vitae ultrices arcu condimentum. Curabitur vel ligula volutpat, gravida velit vel, egestas dolor. Mauris congue vestibulum finibus. Vivamus elementum facilisis diam sit amet scelerisque. Ut efficitur efficitur ante ac mollis. Etiam sed nibh magna.</p>
+        </div>
         <div>
-            <ul id="inProgress">
-                <li>I</li>
-                <li>N</li>
-                <br>
-                <li>P</li>
-                <li>R</li>
-                <li>O</li>
-                <li>G</li>
-                <li>R</li>
-                <li>E</li>
-                <li>S</li>
-                <li>S</li>
-                <li>!</li>
-                <li>!</li>
-            </ul>
         </div>
     </body>
 </html>
