--- a/test/index.html
+++ b/test/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+        <link type="text/css" rel="stylesheet" href="../stylesheet.css"/>
         <title>Alexander Hwang: Personal Page</title>
     </head>
     <body>
         <div class="menu_bar">
             <ul>
-                <li></li>
                 <li class="menu_item">Test</li>
-                <li></li>
             </ul>
         </div>
         <div>
