--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-        <link href='https://fonts.googleapis.com/css?family=Open+Sans:normal&effect=outline' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Raleway:normal&effect=outline' rel='stylesheet' type='text/css'>
         <title>Alexander Hwang: Personal Page</title>
     </head>
     <body>
