Changed the opening picture and gave credits and copyright notice. Removed the old doe photo.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             </ul>
         </div>
 
-        <div id="opening">
+        <div id="opening" title="&copy 2010 The Regents of the University of California, through the Lawrence Berkeley National Laboratory.
+                                 Photo credit goes to the Lawrence Berkeley National Laboratory.">
             <div class="font-effect-outline">Alexander Hwang</div>
         </div>
         <div id="color_pallette">
