Reduced background image resolution. Added contact information on the bottom. Removed color band.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                                  Photo credit goes to the Lawrence Berkeley National Laboratory.">
             <div class="font-effect-outline">Alexander Hwang</div>
         </div>
-        <div id="color_pallette">
+        <!--< div id="color_pallette">
             <div style="background-color:#103973"><span>#103973</span></div>
             <div style="background-color:#528be6"><span>#528be6</span></div>
             <div style="background-color:#ffffff"><span>#ffffff</span></div>
@@ -34,7 +34,7 @@
             <div style="background-color:#deeeff"><span>#deeeff</span></div>
             <div style="background-color:#4a73ac"><span>#4a73ac</span></div>
             <div style="background-color:#7b5241"><span>#7b5241</span></div>
-        </div>
+        </div> -->
         <div class="text">
             <h2>Projects</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec bibendum mollis velit, nec imperdiet dolor facilisis at. Duis tincidunt porttitor velit gravida iaculis. Morbi et varius sapien. Donec bibendum venenatis placerat. Sed consequat turpis nisl, eget sodales mi eleifend eget. Duis arcu nibh, varius sit amet elit ac, scelerisque sagittis ligula. Nullam scelerisque, dolor semper rhoncus suscipit, sem est vulputate metus, vitae iaculis massa ligula vel ipsum. Morbi feugiat laoreet dapibus. Sed mattis nibh tincidunt vehicula mollis. Quisque vehicula molestie leo. In lacinia ex diam, a pulvinar purus dignissim vitae. Aenean tristique molestie mauris. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nam malesuada a tellus nec finibus. Vestibulum eu leo magna. Proin nisi ante, efficitur nec sem id, tempus lacinia ante.</p>
@@ -49,7 +49,19 @@
         </div>
         <div class="text">
             <h2>Contact/More</h2>
-            <p>Aliquam dictum ante neque, rutrum egestas eros fringilla ut. Maecenas tempor aliquam sem, nec tincidunt orci sollicitudin sit amet. Donec sem lorem, dignissim id venenatis at, egestas et dolor. Ut maximus magna at accumsan condimentum. Etiam sit amet facilisis nunc. Sed sagittis, augue in porta convallis, nulla nulla consectetur sapien, et accumsan tortor eros ut tellus. Proin bibendum nunc et est feugiat, vitae ultrices arcu condimentum. Curabitur vel ligula volutpat, gravida velit vel, egestas dolor. Mauris congue vestibulum finibus. Vivamus elementum facilisis diam sit amet scelerisque. Ut efficitur efficitur ante ac mollis. Etiam sed nibh magna.</p>
+            <div id="links">
+            <div id="contact">
+                <p>Email: <a href="mailto:a.hwang@berkeley.edu">a.hwang@berkeley.edu</a>
+                <br>
+                Phone: 1 949 791 7689</p>
+            </div>
+            <div id="linkedin">
+                <a href="https://www.linkedin.com/pub/alexander-hwang/b2/700/87"><img src="images/linkedin_myprofile_160x33.png" width="160" height="33" border="0" alt="View Alexander Hwang's profile on LinkedIn"></a>
+            </div>
+            <div id="github">
+                <a href="https://www.github.com/alxhwg/"><img src="images/PNG/GitHub-Mark-64px.png"></a>
+            </div>
+        </div>
         </div>
         <div>
         </div>
