Changed Lorem impsums to content. Generally made the site to be more useable.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
                 <li class="menu_item">Home</li>
                 <li class="menu_item">Projects</li>
                 <li class="menu_item">About Me</li>
-                <a href="test/index.html"><li class="menu_item">Test</li></a>
-                <a href="next.html"><li class="menu_item">Next</li></a>
+                <!-- <a href="test/index.html"><li class="menu_item">Test</li></a> -->
+                <a href="next.html"><li class="menu_item">Site In Progress</li></a>
 
             </ul>
         </div>
@@ -37,31 +37,33 @@
         </div> -->
         <div class="text">
             <h2>Projects</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec bibendum mollis velit, nec imperdiet dolor facilisis at. Duis tincidunt porttitor velit gravida iaculis. Morbi et varius sapien. Donec bibendum venenatis placerat. Sed consequat turpis nisl, eget sodales mi eleifend eget. Duis arcu nibh, varius sit amet elit ac, scelerisque sagittis ligula. Nullam scelerisque, dolor semper rhoncus suscipit, sem est vulputate metus, vitae iaculis massa ligula vel ipsum. Morbi feugiat laoreet dapibus. Sed mattis nibh tincidunt vehicula mollis. Quisque vehicula molestie leo. In lacinia ex diam, a pulvinar purus dignissim vitae. Aenean tristique molestie mauris. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nam malesuada a tellus nec finibus. Vestibulum eu leo magna. Proin nisi ante, efficitur nec sem id, tempus lacinia ante.</p>
+            <p>Section In Progress.</p>
         </div>
         <div class="text">
             <h2>About Me</h2>
-            <p>Pellentesque ornare, odio ut blandit blandit, lorem elit tristique libero, id hendrerit ligula erat eu urna. Etiam faucibus quam viverra leo placerat malesuada. Fusce mollis lectus at convallis ultrices. Maecenas pharetra lectus a laoreet posuere. Quisque iaculis commodo sem, eget consequat nisi vulputate vitae. Integer sed ultrices nulla, at sagittis nulla. Vestibulum vel ex at tellus ullamcorper finibus.</p>
+            <p>My name is Alexander Hwang, and I am a second year student pursuing a Bachelor of Science in Electrical Engineering and Computer Science at the University of California, Berkeley. I am currently looking for a software internship for Summer 2016.</p>
+            <p>Here's a little about my cutural tastes:<br>Two of my favorite television shows are Sherlock and Running Man. Recent movies that I've watched and loved include Interstellar, Mad Max, and Gone Girl. My favorite and most recently read books are from The Kingkiller Chronicle by Patrick Rothfuss, and I am anxiously awaiting for his thrid installment. I also love listening to music. Some could say, I collect songs. Some of my favorite artists include St. Motel, ST&Delta;RC&Delta;DI&Delta;N, B&Oslash;RNS, and Oh Wonder.</p>
+            <p>Right now, I'm most excited to take CS 170: Efficient Algorithms and Intractable Problems, and to become a member of Eta Kappa Nu. I'm also interested in exploring Android development!</p>
         </div>
-        <div class="text">
+        <!-- <div class="text">
             <h2>Skills</h2>
             <p>Curabitur sit amet ante at neque elementum posuere. Phasellus quis aliquam mauris. Aliquam pulvinar maximus magna et accumsan. Donec at efficitur sapien. Suspendisse potenti. Phasellus ultrices vel felis eget dictum. Aliquam lacinia tellus vel tincidunt bibendum. Curabitur sit amet enim sodales, condimentum ligula at, vestibulum arcu. Phasellus commodo pharetra sem sed semper. Curabitur luctus ornare hendrerit. Integer fermentum justo risus, ut blandit lorem imperdiet vel. Vestibulum fringilla vel nisl quis elementum.</p>
-        </div>
+        </div> -->
         <div class="text">
             <h2>Contact/More</h2>
             <div id="links">
-            <div id="contact">
-                <p>Email: <a href="mailto:a.hwang@berkeley.edu">a.hwang@berkeley.edu</a>
-                <br>
-                Phone: 1 949 791 7689</p>
+                <div id="contact">
+                    <p>Email: <a href="mailto:a.hwang@berkeley.edu">a.hwang@berkeley.edu</a>
+                    <br>
+                    Phone: 1 949 791 7689</p>
+                </div>
+                <div id="linkedin">
+                    <a href="https://www.linkedin.com/pub/alexander-hwang/b2/700/87"><img src="images/linkedin_myprofile_160x33.png" width="160" height="33" border="0" alt="View Alexander Hwang's profile on LinkedIn"></a>
+                </div>
+                <div id="github">
+                    <a href="https://www.github.com/alxhwg/"><img src="images/PNG/GitHub-Mark-64px.png"></a>
+                </div>
             </div>
-            <div id="linkedin">
-                <a href="https://www.linkedin.com/pub/alexander-hwang/b2/700/87"><img src="images/linkedin_myprofile_160x33.png" width="160" height="33" border="0" alt="View Alexander Hwang's profile on LinkedIn"></a>
-            </div>
-            <div id="github">
-                <a href="https://www.github.com/alxhwg/"><img src="images/PNG/GitHub-Mark-64px.png"></a>
-            </div>
-        </div>
         </div>
         <div>
         </div>
