--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <li class="menu_item">Projects</li>
                 <li class="menu_item">About Me</li>
                 <!-- <a href="test/index.html"><li class="menu_item">Test</li></a> -->
-                <a href="next.html"><li class="menu_item">Site In Progress</li></a>
+                <a href="resumes/resume01.pdf"><li class="menu_item">Resume</li></a>
 
             </ul>
         </div>
@@ -37,7 +37,7 @@
         </div> -->
         <div class="text">
             <h2>Projects</h2>
-            <p>Section In Progress.</p>
+            <p>Section In Progress. (The whole site is still incomplete.)</p>
         </div>
         <div class="text">
             <h2>About Me</h2>
