Updated resume and added portrait (secret link).

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+        <link type="text/css" rel="stylesheet" href="styles/stylesheet.css"/>
         <link href='https://fonts.googleapis.com/css?family=Raleway:normal&effect=outline' rel='stylesheet' type='text/css'>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
         <script>
@@ -24,7 +24,7 @@
                 <a href="#projects"><li class="menu_item">Projects</li></a>
                 <a href="#about"><li class="menu_item">About Me</li></a>
                 <a href="#contact"><li class="menu_item">Contact Me</li></a>
-                <a target="_blank" href="resumes/resume01.pdf"><li class="menu_item">Resume</li></a>
+                <a target="_blank" href="resumes/resume.pdf"><li class="menu_item">Resume</li></a>
             </ul>
         </div>
 
@@ -48,10 +48,10 @@
         </div>  -->
         <div class="text" id="projects">
             <h2>Projects</h2>
-            <p>Section In Progress. (The whole site is still incomplete.)</p>
+            <p>Section In Progress.</p>
         </div>
         <div class="text" id="about">
-            <h2>About Me</h2>
+            <h2>About <a id="me" href="images/meh.jpg">Me</a></h2>
             <p>My name is Alexander Hwang, and I am a second year student pursuing a Bachelor of Science in Electrical Engineering and Computer Science at the University of California, Berkeley. I am currently looking for a software internship for Summer 2016.</p>
             <p>Here's a little about my cutural tastes:<br>Two of my favorite television shows are Sherlock and Running Man. Recent movies that I've watched and loved include Interstellar, Mad Max, and Gone Girl. My favorite and most recently read books are from The Kingkiller Chronicle by Patrick Rothfuss, and I am anxiously awaiting for his thrid installment. I also love listening to music. Some could say, I collect songs. Some of my favorite artists include St. Motel, ST&Delta;RC&Delta;DI&Delta;N, B&Oslash;RNS, Jukebox the Ghost, and Oh Wonder.</p>
             <p>Right now, I'm most excited to take CS 170: Efficient Algorithms and Intractable Problems, and to become a member of Eta Kappa Nu. I'm also interested in exploring Android development!</p>
@@ -68,7 +68,7 @@
                     <a href="https://www.linkedin.com/pub/alexander-hwang/b2/700/87"><img src="images/linkedin_myprofile_160x33.png" width="160" height="33" border="0" alt="View Alexander Hwang's profile on LinkedIn"></a>
                 </div>
                 <div id="github">
-                    <a href="https://www.github.com/alxhwg/"><img src="images/PNG/GitHub-Mark-64px.png"></a>
+                    <a href="https://www.github.com/alxhwg/"><img src="images/GitHub/GitHub-Mark-64px.png"></a>
                 </div>
             </div>
         </div>
