Minor tweaks and updated resume. Considering uploading short stories from past.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="menu_bar">
             <ul>
                 <a href="#opening"><li class="menu_item">Home</li></a>
-                <a href="#projects"><li class="menu_item">Projects</li></a>
+                <a href="#works"><li class="menu_item">Works</li></a>
                 <a href="#about"><li class="menu_item">About Me</li></a>
                 <a href="#contact"><li class="menu_item">Contact Me</li></a>
                 <a target="_blank" href="resumes/resume.pdf"><li class="menu_item">Resume</li></a>
@@ -46,15 +46,15 @@
             <div style="background-color:#4a73ac"><span>#4a73ac</span></div>
             <div style="background-color:#7b5241"><span>#7b5241</span></div>
         </div>  -->
-        <div class="text" id="projects">
-            <h2>Projects</h2>
+        <div class="text" id="works">
+            <h2>Works</h2>
             <p>Section In Progress.</p>
+            <a href="stories/Wk1_Someone_dies.txt">Week 1</a>
         </div>
         <div class="text" id="about">
             <h2>About <a id="me" href="images/meh.jpg" target="_blank">Me</a></h2>
             <p>My name is Alexander Hwang, and I am a second year student pursuing a Bachelor of Science in Electrical Engineering and Computer Science at the University of California, Berkeley. I am currently looking for a software internship for Summer 2016.</p>
             <p>Here's a little about my cutural tastes:<br>Two of my favorite television shows are Sherlock and Running Man. Recent movies that I've watched and loved include Interstellar, Mad Max, and Gone Girl. My favorite and most recently read books are from The Kingkiller Chronicle by Patrick Rothfuss, and I am anxiously awaiting for his thrid installment. I also love listening to music. Some could say, I collect songs. Some of my favorite artists include St. Motel, ST&Delta;RC&Delta;DI&Delta;N, B&Oslash;RNS, Jukebox the Ghost, and Oh Wonder.</p>
-            <p>Right now, I'm most excited to take CS 170: Efficient Algorithms and Intractable Problems, and to become a member of Eta Kappa Nu. I'm also interested in exploring Android development!</p>
         </div>
         <div class="text" id="contact">
             <h2>Contact/More</h2>
