Made some updates: resume PDF no longer linked. Link to stories.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                 <a href="#works"><li class="menu_item">Works</li></a>
                 <a href="#about"><li class="menu_item">About Me</li></a>
                 <a href="#contact"><li class="menu_item">Contact Me</li></a>
-                <a target="_blank" href="resumes/resume.pdf"><li class="menu_item">Resume</li></a>
+                <a href="#contact" id='resume'><li class="menu_item" ><span>Resume</span></li></a>
+                <!-- <a target="_blank" href="resumes/resume.pdf" id="resume"><li class="menu_item"><span>Resume</span></li></a> -->
             </ul>
         </div>
 
@@ -46,10 +47,26 @@
             <div style="background-color:#4a73ac"><span>#4a73ac</span></div>
             <div style="background-color:#7b5241"><span>#7b5241</span></div>
         </div>  -->
+        <div class="text" id="wip">
+            <p>Clearly, this website is incomplete. I hope to have more to share in the future so that this website can be more enjoyable.</p>
+        </div>
         <div class="text" id="works">
             <h2>Works</h2>
-            <p>Section In Progress.</p>
-            <a href="stories/Wk1_Someone_dies.txt">Week 1</a>
+            <p>Below are some stories I wrote in high school. They are unpolished.</p>
+            <ul>
+              <li><a href="stories/Wk1_Someone_dies.txt">Week 1</a></li>
+              <li><a href="stories/Wk2_Poem(s).txt">Week 2</a></li>
+              <li><a href="stories/Wk3_Disney_Princesses.txt">Week 3</a></li>
+              <li><a href="stories/Wk4_Betrayal.txt">Week 4</a></li>
+              <li><a href="stories/Wk5_Mental_Breakdown.txt">Week 5</a></li>
+              <li><a href="stories/Wk6_Sacrifice.txt">Week 6</a></li>
+              <li><a href="stories/Wk7_Redemption.txt">Week 7</a></li>
+              <li><a href="stories/Wk8_Monumental_Secret.txt">Week 8</a></li>
+              <li><a href="stories/Wk9_Escape.txt">Week 9</a></li>
+              <li><a href="stories/Wk10_Rush_of_Adrenaline.txt">Week 10</a></li>
+              <li><a href="stories/Wk1X_Dead_Poets_Plague.txt">Week 1X</a></li>
+              <li><a href="stories/Wk1X_Short_with_no_theme.txt">Week 1X</a></li>
+            </ul>
         </div>
         <div class="text" id="about">
             <h2>About <a id="me" href="images/meh.jpg" target="_blank">Me</a></h2>
