--- a/index.html
+++ b/index.html
@@ -69,9 +69,13 @@
             </ul>
         </div>
         <div class="text" id="about">
-            <h2>About <a id="me" href="images/meh.jpg" target="_blank">Me</a></h2>
-            <p>My name is Alexander Hwang, and I am a second year student pursuing a Bachelor of Science in Electrical Engineering and Computer Science at the University of California, Berkeley. I am currently looking for a software internship for Summer 2016.</p>
-            <p>Here's a little about my cutural tastes:<br>Two of my favorite television shows are Sherlock and Running Man. Recent movies that I've watched and loved include Interstellar, Mad Max, and Gone Girl. My favorite and most recently read books are from The Kingkiller Chronicle by Patrick Rothfuss, and I am anxiously awaiting for his thrid installment. I also love listening to music. Some could say, I collect songs. Some of my favorite artists include St. Motel, ST&Delta;RC&Delta;DI&Delta;N, B&Oslash;RNS, Jukebox the Ghost, and Oh Wonder.</p>
+          <h2>About <a id="me" href="images/meh.jpg" target="_blank">Me</a></h2>
+            <p>My name is Alexander Hwang, and I am a rising junior pursuing a Bachelor of Science in Electrical Engineering and Computer Science at the University of California, Berkeley.</p>
+            <p>Here's a short introduction my cutural tastes:<br>Two of my favorite television shows are Sherlock and Running Man. Recent movies that I've watched and loved include Interstellar, Mad Max, and Gone Girl. My favorite and most recently read books are from The Kingkiller Chronicle by Patrick Rothfuss, and I am anxiously awaiting for his thrid installment. I also love listening to music and exploring new songs and artists on Spotify. Some of my favorite artists include St. Motel, ST&Delta;RC&Delta;DI&Delta;N, B&Oslash;RNS, Jukebox the Ghost, and Oh Wonder.</p>
+            <p>Spotify is my primary platform for music, and my activity is pretty dynamic. I listen to a lot of songs and do a bunch of filtering and processing of songs and artists into my different playlists. Below is a pretty recent playlist that I started so that I would eventually have a playlist of awesome songs to play in public.</p>
+            <div id='spotify'>
+                <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3A1244704702%3Aplaylist%3A0LqsTVX32C5wYXNWaQQy8u&theme=white" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+            </div>
         </div>
         <div class="text" id="contact">
             <h2>Contact/More</h2>
@@ -88,8 +92,6 @@
                     <a href="https://www.github.com/alxhwg/"><img src="images/GitHub/GitHub-Mark-64px.png"></a>
                 </div>
             </div>
-        </div>
-        <div>
         </div>
     </body>
 </html>
