--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
             <div style="background-color:#7b5241"><span>#7b5241</span></div>
         </div>  -->
         <div class="text" id="wip">
-            <p>Clearly, this website is incomplete. I hope to have more to share in the future so that this website can be more enjoyable.</p>
+            <p>Clearly, this website is a work in progress. I hope to have more to share in the future so that this website can be more enjoyable.</p>
         </div>
         <div class="text" id="works">
             <h2>Works</h2>
-            <p>Below are some stories I wrote in high school. They are unpolished.</p>
+            <p>Below are some stories I wrote in high school for a summer. They are unpolished and contain all the wonderful, special spelling and grammar mistakes that I made when I originally wrote them.</p>
             <ul>
               <li><a href="stories/Wk1_Someone_dies.txt">Week 1</a></li>
               <li><a href="stories/Wk2_Poem(s).txt">Week 2</a></li>
@@ -82,8 +82,6 @@
             <div id="links">
                 <div id="contact_info">
                     <p>Email: <a href="mailto:a.hwang@berkeley.edu">a.hwang@berkeley.edu</a>
-                    <br>
-                    Phone: 1 949 791 7689</p>
                 </div>
                 <div id="linkedin">
                     <a href="https://www.linkedin.com/pub/alexander-hwang/b2/700/87"><img src="images/linkedin_myprofile_160x33.png" width="160" height="33" border="0" alt="View Alexander Hwang's profile on LinkedIn"></a>
